--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Glass Website</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
@@ -36,6 +38,41 @@
           <div class="pro">
             <h2>Join pro for free games.</h2>
             <img src="./images/controller.png " alt="">
+          </div>
+        </div>
+        <div class="games">
+          <div class="status">
+            <h1>Active Games</h1>
+            <input type="text">
+          </div>
+          <div class="cards">
+            <div class="card">
+              <img src="./images/assassins.png" alt="">
+              <div class="card-info">
+                <h2>Assassins Creed Valhalla</h2>
+                <p>PS5 Version</p>
+                <div class="progress"></div>
+              </div>
+              <h2 class="percentage">60%</h2>
+            </div>
+            <div class="card">
+              <img src="./images/spiderman.png" alt="">
+              <div class="card-info">
+                <h2>Assassins Creed Valhalla</h2>
+                <p>PS5 Version</p>
+                <div class="progress"></div>
+              </div>
+              <h2 class="percentage">60%</h2>
+            </div>
+            <div class="card">
+              <img src="./images/sackboy.png" alt="">
+              <div class="card-info">
+                <h2>Assassins Creed Valhalla</h2>
+                <p>PS5 Version</p>
+                <div class="progress"></div>
+              </div>
+              <h2 class="percentage">60%</h2>
+            </div>
           </div>
         </div>
       </section>
